# gobang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  ai.c  ai.h  board.c  board.h  challenge.c  challenge.h  logic.c  logic.h  main.c  musicplayer.c  musicplayer.h  stats.c  stats.h
